--- a/src/components/Movie/style.css
+++ b/src/components/Movie/style.css
@@ -2,3 +2,18 @@
   max-width: 60rem;
   margin: 0 auto;
 }
+
+/* movies */
+.movies-container {
+  display: flex;
+  align-items: start;
+  gap: 2rem;
+}
+
+/* movie list */
+.movie-list {
+  flex: 0 0 25%;
+  display: flex;
+  flex-direction: column;
+  background-color: #c2dffc;
+}
